added a Dockerfile argument to specify which branch to build

--- a/packaging/Dockerfile
+++ b/packaging/Dockerfile
@@ -10,6 +10,9 @@
 # Use a base image with CUDA development libraries
 FROM nvidia/cuda:9.2-devel-ubuntu18.04
 
+# Specify which TeleSculptor branch to build
+ARG branch=release
+
 # Install required system packages to build TeleSculptor
 # Everything else is built from Fletch
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -35,7 +38,7 @@ RUN make install
 WORKDIR ..
 
 # Clone the source code from Git
-RUN git clone https://github.com/Kitware/TeleSculptor.git TeleSculptor/src
+RUN git clone -b ${branch} https://github.com/Kitware/TeleSculptor.git TeleSculptor/src
 
 # Make a build directory and set it as the working directory
 RUN mkdir TeleSculptor/bld
