updated default configuration

--- a/config/gui_compute_depth.conf
+++ b/config/gui_compute_depth.conf
@@ -2,9 +2,11 @@
 
 block compute_depth
   include super3d_depth_map.conf
-  # number of support images on each side of the reference frame
-  # total number of images used is 2 * num_support + 1
-  num_support = 10
+  # number of support images for each depth map
+  num_support = 20
+  # select support images from the set of cameras with view angles
+  # within this many degrees of the reference image
+  angle_span = 15
 endblock
 
 block batch_depth
