Updated the config files to account for code moved from core to MVG

--- a/config/gui_initialize.conf
+++ b/config/gui_initialize.conf
@@ -3,5 +3,5 @@
 default_camera_config := gui_default_camera_intrinsics.conf
 
 block initializer
-  include keyframe_initializer.conf
+  include mvg_initialize_cameras_landmarks.conf
 endblock
