--- a/config/gui_triangulate.conf
+++ b/config/gui_triangulate.conf
@@ -2,12 +2,12 @@
 
 # Use the homogeneous method for triangulating points. The homogeneous method
 # can triangulate points at or near infinity and discard them.
-triangulator:core:homogeneous = true
-triangulator:core:ransac = true
+triangulator:mvg:homogeneous = true
+triangulator:mvg:ransac = true
 
 # Algorithm to use for 'lm_triangulator'.
 # Must be one of the following options:
-# 	- core
+# 	- mvg
 # 	- vxl
-triangulator:type = core
+triangulator:type = mvg
 
