--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ script:
   - export PATH=$HOME/deps/bin:$PATH
   - mkdir build
   - cd build
-  - cmake -DCMAKE_C_COMPILER=$C_COMPILER
+  - /opt/kitware/cmake/bin/cmake
+          -DCMAKE_C_COMPILER=$C_COMPILER
           -DCMAKE_CXX_COMPILER=$CXX_COMPILER
           -DCMAKE_INSTALL_PREFIX=$HOME/install
           -DTELESCULPTOR_ENABLE_TESTING:BOOL=ON
