add python flag

--- a/packaging/Flatpak/com.github.Kitware.TeleSculptor.yaml
+++ b/packaging/Flatpak/com.github.Kitware.TeleSculptor.yaml
@@ -229,6 +229,7 @@ modules:
       - -DKWIVER_ENABLE_CERES:BOOL=ON
       - -DKWIVER_ENABLE_CUDA:BOOL=OFF
       - -DKWIVER_ENABLE_C_BINDINGS:BOOL=ON
+      - -DKWIVER_ENABLE_PYTHON:BOOL=ON
       - -DKWIVER_ENABLE_DARKNET:BOOL=OFF
       - -DKWIVER_ENABLE_DLL_WARNINGS:BOOL=OFF
       - -DKWIVER_ENABLE_DOCS:BOOL=OFF
