Fixed build issue with PDAL on Macs
Pdal on macs do not have the pdal_base library file that exists
on Linux.

--- a/maptk/CMakeLists.txt
+++ b/maptk/CMakeLists.txt
@@ -47,8 +47,8 @@ option(TELESCULPTOR_USE_PDAL "Enable PDAL support for saving to LAS" ON)
 if(TELESCULPTOR_USE_PDAL)
   find_package(PDAL 1.0.0 REQUIRED)
 
-  # PDAL library names are improperly exported in PDAL 1.7.2 for non-Windows
-  if (${PDAL_VERSION} VERSION_EQUAL "1.7.2" AND NOT WIN32)
+  # PDAL library names are improperly exported in PDAL 1.7.2 for Linux
+  if (${PDAL_VERSION} VERSION_EQUAL "1.7.2" AND NOT (WIN32 OR APPLE))
     set(PDAL_LIBRARIES "pdal_base")
   endif()
 
