added UI option to use GPU

--- a/config/gui_integrate_depth_maps.conf
+++ b/config/gui_integrate_depth_maps.conf
@@ -1,49 +1,9 @@
-# Default configuration for the "integrate_depth_maps" algorithm used in the GUI
+# Default configuration for the CPU "integrate_depth_maps" algorithm used in the GUI
 
 block integrate_depth_maps
-	type = cuda
-	block cuda
-		ray_potential_thickness = 3.0
-		ray_potential_rho = 1.0
-		ray_potential_eta = 1.0
-		ray_potential_delta = 10.0
-		grid_spacing = 1.0 1.0 1.0
-		voxel_spacing_factor = 2.0
+	type = mvg
+	block mvg
+		include integrate_depth_maps_common.conf
 	endblock
 endblock
-
-##############################################################################
-#     Truncated Signed Distance Function (TSDF) Parameter Description        #
-##############################################################################
-# Eta is a percentage of rho ( 0 < Eta < 1)
-# Delta has to be superior to Thick
-#
-#                     'real distance' - 'depth value'
-#                                     |
-#                                     |
-#                                     |         ---------------  Rho
-#                                     |        /|             |
-#                                     |       /               |
-#                                     |      /  |             |
-#                                     |     /                 |
-#                                     |    /    |             |
-#                                     |   /                   |
-#                                     |  /      |             |
-#                                     | /                     |
-#                                     |/        |             |______________
-#----------------------------------------------------------------------------
-#                                    /
-#                                   /
-#                                  /
-#--------------  Eta*rho          /
-#             |                  /
-#             |                 /
-#             |                /
-#             |               /
-#             |              /
-#             ---------------
-#                            <--------->
-#                               Thick
-#             <----------------------->
-#                        Delta
 
