fix desktop category and metainfo

--- a/packaging/Flatpak/org.telesculptor.TeleSculptor.desktop
+++ b/packaging/Flatpak/org.telesculptor.TeleSculptor.desktop
@@ -7,5 +7,5 @@ Exec=TeleSculptor %U
 Terminal=false
 Type=Application
 Icon=org.telesculptor.TeleSculptor
-Categories=Qt;Science;DataVisualization;
+Categories=Qt;Science;DataVisualization;Video;AudioVideo;ImageProcessing;Geoscience;3DGraphics
 
